fix(basic-3.5 - 3.8): css whitespaces semicolon

--- a/style.css
+++ b/style.css
@@ -20,10 +20,12 @@ body {
     font-family: fantasy, cursive;
 }
 
-@media (max-width:768px) {
+@media (max-width: 768px) {
+
     .matrix-front-img { 
         text-align: center;
     }
+
 }
 
 .main-elem {
@@ -35,7 +37,7 @@ body {
 .task {
     width: 56%;
     display: inline-block;
-    flex-grow: 1
+    flex-grow: 1;
 }
 
 .task-row-wrapper {
@@ -43,16 +45,18 @@ body {
 }
 
 ul {
-    margin:0;
+    margin: 0;
     padding: 0px;
 }
 
-li, h3 {
-    list-style:none;
+li, 
+h3 {
+    list-style: none;
 }
 
-input,button{
-    outline:none;
+input,
+button {
+    outline: none;
 }
 
 button {
@@ -68,6 +72,7 @@ button {
 button:hover {
     color: #3a3a3a;
 }
+
 /* Heading */
 h3,
 label[for="new-task"] {
@@ -133,8 +138,8 @@ li > label {
     width: 226px;
 }
 
-li >    input[type="text"] {
-    width: 226px
+li > input[type="text"] {
+    width: 226px;
 }
 
 .delete img {
@@ -155,14 +160,14 @@ li >    input[type="text"] {
 
 /* Edit Task */
 ul li input[type=text] {
-    display:none
+    display: none;
 }
 
 ul .edit-mode input[type=text] {
-    display:inline-block;
-    width:224px
+    display: inline-block;
+    width: 224px;
 }
 
 ul .edit-mode label {
-    display:none;
+    display: none;
 }
